--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "url": "git+https://github.com/mtpYa/planning-pocker.git"
   },
   "keywords": [
-    "Planning",
-    "poker",
-    "Scrum",
+    "planning",
+    "scrum",
     "poker"
   ],
   "author": "",
@@ -23,6 +22,7 @@
   },
   "homepage": "https://github.com/mtpYa/planning-pocker#readme",
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
@@ -33,6 +33,10 @@
     "babel-loader": "^6.2.8",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.0",
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   }
 }
