--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "gamified technique for estimating development goals in software development",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --watch --progress",
+    "build": "cross-env NODE_ENV=development webpack --watch --progress",
     "serve": "nodemon server/server.js",
     "start": "concurrently --kill-others --raw \"npm run build\" \"npm run serve\""
   },
@@ -29,6 +29,7 @@
     "concurrently": "^3.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "mongoose": "^4.7.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.4.1",
@@ -42,6 +43,7 @@
     "babel-loader": "^6.2.8",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
     "morgan": "^1.7.0",
     "node-sass": "^3.13.0",
