--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "superagent": "^3.1.0"
   },
