--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "superagent": "^3.1.0"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
